--- a/Project.ipynb
+++ b/Project.ipynb
@@ -21,6 +21,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import keras\n",
+    "import keras.layers as layers\n",
+    "import keras.models\n",
+    "from keras.models import Sequential\n",
+    "import pathlib\n",
     "from sklearn.model_selection import GroupKFold"
    ],
    "metadata": {
@@ -34,7 +38,73 @@
    "source": [
     "im_width = 496\n",
     "im_height = 248\n",
-    "batch_size = 32"
+    "batch_size = 32\n",
+    "\n",
+    "train_ds = keras.utils.image_dataset_from_directory(\n",
+    "    pathlib.Path('Hack_AI_2024_DATA'),\n",
+    "    validation_split = 0.2,\n",
+    "    subset = 'training',\n",
+    "    seed = 123,\n",
+    "    image_size = (im_height,im_width),\n",
+    "    batch_size = batch_size\n",
+    ")\n",
+    "\n",
+    "val_ds = keras.utils.image_dataset_from_directory(\n",
+    "    pathlib.Path('Hack_AI_2024_DATA'),\n",
+    "    validation_split = 0.2,\n",
+    "    subset = 'validation',\n",
+    "    seed = 123,\n",
+    "    image_size = (im_height,im_width),\n",
+    "    batch_size = batch_size  \n",
+    ")\n",
+    "\n",
+    "class_names = train_ds.class_names\n",
+    "print(class_names)\n",
+    "\n",
+    "AUTOTUNE = tf.data.AUTOTUNE\n",
+    "\n",
+    "train_ds = train_ds.cache().shuffle(100000).prefetch(buffer_size = AUTOTUNE)\n",
+    "val_ds = val_ds.cache().prefetch(buffer_size = AUTOTUNE)\n",
+    "\n",
+    "normalization_layer = layers.Rescaling(1./255)\n",
+    "\n",
+    "normalized_ds = train_ds.map(lambda x, y: (normalization_layer(x), y))\n",
+    "image_batch, labels_batch = next(iter(normalized_ds))\n",
+    "\n",
+    "num_classes = len(class_names)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    layers.Rescaling(1./255, input_shape=(im_height, im_width, 3)),\n",
+    "    layers.Conv2D(16, 3, padding='same', activation='relu'),\n",
+    "    layers.MaxPooling2D(),\n",
+    "    layers.Conv2D(32, 3, padding='same', activation='relu'),\n",
+    "    layers.MaxPooling2D(),\n",
+    "    layers.Conv2D(64, 3, padding='same', activation='relu'),\n",
+    "    layers.MaxPooling2D(),\n",
+    "    layers.Dropout(0.2),\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(128, activation='relu'),\n",
+    "    layers.Dense(num_classes)\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer = 'adam',\n",
+    "              loss = keras.losses.SparseCategoricalCrossentropy(from_logits = True),\n",
+    "              metrics=['accuracy']\n",
+    "              )\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "epochs = 100\n",
+    "history = model.fit(\n",
+    "    train_ds,\n",
+    "    validation_data = val_ds,\n",
+    "    epochs = epochs\n",
+    ")\n",
+    "\n",
+    "                \n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
