--- a/Project.ipynb
+++ b/Project.ipynb
@@ -14,24 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-02-17 12:14:21.768863: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import keras\n",
     "from keras import layers\n",
-    "from sklearn.model_selection import KFold, GroupKFold\n",
+    "from sklearn.model_selection import KFold\n",
     "import pathlib"
    ],
    "metadata": {
@@ -40,13 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "im_width = 496\n",
-    "im_height = 248\n",
-    "batch_size = 61\n",
-    "n = 86_437"
+    "im_height = 248"
    ],
    "metadata": {
     "collapsed": false
@@ -54,72 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 86437 files belonging to 4 classes.\n",
-      "Using 69150 files for training.\n"
+      "(4, 248, 496, 61)\n",
+      "(4,)\n"
      ]
     }
    ],
-   "source": [
-    "train_ds = keras.utils.image_dataset_from_directory(\n",
-    "  pathlib.Path('Data'),\n",
-    "  validation_split=0.2,\n",
-    "  subset=\"training\",\n",
-    "  seed=123,\n",
-    "  image_size=(im_height, im_width),\n",
-    "  batch_size=1\n",
-    ")\n",
-    "val_ds = keras.utils.image_dataset_from_directory(\n",
-    "  pathlib.Path('Data'),\n",
-    "  validation_split=0.2,\n",
-    "  subset=\"validation\",\n",
-    "  seed=123,\n",
-    "  image_size=(im_height, im_width),\n",
-    "  batch_size=1\n",
-    ")\n",
-    "\n",
-    "ds = train_ds.concatenate(val_ds)\n",
-    "\n",
-    "fold = KFold(n_splits=1_417, shuffle=True)\n",
-    "\n",
-    "for train, test in fold.split(np.arange(len(ds))):\n",
-    "  train = [x+1 for x in train]\n",
-    "  test = [x+1 for x in test]\n",
-    "  train_ds = tf.data.Dataset.from_tensor_slices([ds.skip(t-1).take(t) for t in train]).flat_map(lambda x: x).map(lambda x, y: (x[0, ...], y[0, ...]))\n",
-    "  test_ds = tf.data.Dataset.from_tensor_slices([ds.skip(t-1).take(t) for t in test]).flat_map(lambda x: x).map(lambda x, y: (x[0, ...], y[0, ...]))\n",
-    "  train_ds = train_ds.take(len(train)).batch(batch_size, drop_remainder=True)\n",
-    "  test_ds = test_ds.take(len(test)).batch(batch_size, drop_remainder=True)\n",
-    "\n",
-    "  model = keras.models.Sequential([\n",
-    "    layers.Rescaling(1./255, input_shape=(im_height, im_width, 3)),\n",
-    "    layers.Conv2D(16, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Conv2D(32, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Conv2D(64, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Dropout(0.2),\n",
-    "    layers.Flatten(),\n",
-    "    layers.Dense(128, activation='relu'),\n",
-    "    layers.Dense(4)\n",
-    "  ])\n",
-    "\n",
-    "  model.compile(optimizer='adam',loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
-    "  history = model.fit(train_ds, epochs=10, steps_per_epoch=1_417)\n",
-    "  scores = model.evaluate(test_ds, verbose=0)\n",
-    "  model.save('models/hai_1')"
-   ],
+   "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
